src/snapshots/jj_pr__tests__merged_parent_descendant_merge_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
abandon merged #1 (delete feat-a)
simplify redundant parent edges of merge commits (if any)
push: #2 (feat-c), #3 (feat-e)
update #2 (feat-c) base -> main
