src/snapshots/jj_pr__tests__merged_parent_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
abandon merged #1 (delete feat-a)
push: #2 (feat-b)
update #2 (feat-b) base -> main
update #2 (feat-b) title -> "child"
